# philosophers

./: .gitignore  CMakeLists.txt  README.md  test_philosophers.sh
philo/: Makefile  eat.c  eat.txt  main.c  parse_options.c  philo  philosopher.c  sleep.c  table.c  test_philosophers.sh  watcher.c  write.c
philo/includes/: philo.h
philo/srcs/: main.c
philo/srcs/config/: config_destroy.c  config_init.c  config_init_forks.c  config_init_philos.c
philo/srcs/fork/: fork_destroy.c  fork_new.c
philo/srcs/philo/: philo_destroy.c  philo_eat.c  philo_monitor.c  philo_new.c  philo_run.c  philo_sleep.c  philo_think.c
philo/srcs/utils/: destroy_objs.c  ft_atoi.c  ft_atol.c  ft_isdigit.c  ft_strlen.c  get_time_ms.c  is_valid_number.c  parse_args.c  safe_write_msg.c  utils.c
philo/utils/: atoi.c  atol.c  isdigit.c  strlen.c  time.c
tests/: CMakeLists.txt  test_config.cpp  test_utils.cpp
tests/unittests/: test_utils.cpp
